# ChangeLog for net-analyzer/sara
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/Attic/ChangeLog,v 1.16 2006/01/09 22:15:49 vanquirius Exp $

*sara-6.0.7d (09 Jan 2006)

  09 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> -sara-6.0.6.ebuild,
  +sara-6.0.7d.ebuild:
  6.0.7d version bump.

  12 Oct 2005; Luis Medinas <metalgod@gentoo.org> sara-6.0.6.ebuild:
  Added ~amd64 keyword. Bug #108327.

*sara-6.0.6 (05 Sep 2005)

  05 Sep 2005; Marcelo Goes <vanquirius@gentoo.org> +sara-6.0.6.ebuild:
  Version bump.

  25 Jul 2005; Marcelo Goes <vanquirius@gentoo.org> -sara-5.1.1a.ebuild,
  -sara-5.2.0a.ebuild, -sara-6.0.1.ebuild, sara-6.0.4.ebuild:
  Marked 6.0.4 x86 stable, removed previous versions. It should fix bug 69638.
  Thanks to Michael Forbes <miforbes-gentoo-org@mbhs.edu>, Kyle England
  <kengland@gentoo.org> and others.

*sara-6.0.4 (22 Jun 2005)

  22 Jun 2005; Marcelo Goes <vanquirius@gentoo.org> sara-6.0.1.ebuild,
  +sara-6.0.4.ebuild:
  Add -j1 to emake as it does not like to build in parallel. Version bump.

  22 Mar 2005; Marcelo Goes <vanquirius@gentoo.org> -sara-5.0.5b.ebuild,
  sara-5.1.1a.ebuild, sara-5.2.0a.ebuild, sara-6.0.1.ebuild:
  Removed unnecessary src_compile from ebuilds, old ebuild.

*sara-6.0.1 (22 Mar 2005)

  22 Mar 2005; Marcelo Goes <vanquirius@gentoo.org> +sara-6.0.1.ebuild:
  Version bump

*sara-5.2.0a (09 Dec 2004)

  09 Dec 2004; Jon Hood <squinky86@gentoo.org> +files/sara,
  +sara-5.2.0a.ebuild:
  Version bump.

  04 Sep 2004; Jon Hood <squinky86@gentoo.org> sara-5.1.1a.ebuild:
  Stable on x86.

  07 Aug 2004; Jon Hood <squinky86@gentoo.org> sara-5.0.5b.ebuild,
  sara-5.1.1a.ebuild:
  Ebuild cleanups thanks to Antonio <netbix@tiscali.it>, #59612.
  DEPEND on net-misc/netkit-fingerd.

*sara-5.1.1a (05 Aug 2004)

  05 Aug 2004; Jon Hood <squinky86@gentoo.org> sara-5.0.5b.ebuild,
  +sara-5.1.1a.ebuild:
  Stable x86 and testing version bumps.
