@@ -1,7 +1,7 @@
-MD5 7dae7ab767e1f0d051111279682cef0b ChangeLog 2355
+MD5 1d68a2145ed60b0bd8fe6bfef22fa6b4 ChangeLog 2471
 MD5 5c10df628bd8e993b404759fef5d70dc files/digest-sara-6.0.4 60
 MD5 e8a1965d072936eccafb53ed1018210c files/digest-sara-6.0.7d 61
 MD5 291ce83a97555c503a53904467cae289 files/sara 246
 MD5 f34e3c8858756da0001b12d2d3fa1af2 metadata.xml 159
-MD5 4d94863ed1540fcca8ba78e2bfb7875c sara-6.0.4.ebuild 3559
-MD5 8eee793cfb288b7eb41a62187cfce0d8 sara-6.0.7d.ebuild 3568
+MD5 bc25e83f1b4de8f32645faf63ca9e065 sara-6.0.4.ebuild 3623
+MD5 2548b3ec5c90a7a6ccdc69e0e1d0502d sara-6.0.7d.ebuild 3632
