@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/Attic/sara-6.0.7d.ebuild,v 1.1 2006/01/09 22:15:49 vanquirius Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/Attic/sara-6.0.7d.ebuild,v 1.2 2006/01/20 19:26:40 pva Exp $
 
 DESCRIPTION="SARA Security Auditor's Research Assistant is a derived work of Security Administrator Tool for Analyzing Networks SATAN"
 SRC_URI="http://www-arc.com/sara/downloads/${P}.tgz"
@@ -15,10 +15,13 @@ IUSE="X"
 DEPEND=">=dev-lang/perl-5.8 \
 	>=app-shells/tcsh-6.12
 	net-misc/netkit-rsh
+	app-arch/sharutils
 	net-misc/netkit-fingerd
 	net-analyzer/nmap
 	net-ftp/ftp
-	X? ( virtual/x11 )"
+	X? ( || ( ( x11-libs/libX11
+				x11-proto/xproto )
+			virtual/x11 ) )"
 
 SARA_HOME=/opt/sara
 
